dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.5)
AC_INIT(gdbmi, 0.1)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_PROG_RANLIB
AM_PROG_LEX
AC_PROG_YACC

dnl Checks for header files.
AC_HEADER_STDC

dnl determine other headers for tgdb, Error if they do not exist
AC_CHECK_HEADERS([stdio.h],,[AC_MSG_ERROR([libgdbmi requires stdio.h to build.])])
AC_CHECK_HEADERS([stdlib.h],,[AC_MSG_ERROR([libgdbmi requires stdlib.h to build.])])
AC_CHECK_HEADERS([string.h],,[AC_MSG_ERROR([libgdbmi requires string.h to build.])])

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_OUTPUT(Makefile src/Makefile)
